--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,8 @@
 *{
     margin:0;
     padding:0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 html,body{
     background-color: #fff;
@@ -31,6 +32,8 @@ section{
     padding:1%;
 }
 header{
+    background-image:-webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.7)),to(rgba(0, 0, 0, 0.7))) ,url('img/hero.jpg');
+    background-image:-o-linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)) ,url('img/hero.jpg');
     background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)) ,url('img/hero.jpg');
     width:100%;
     height:100vh;
@@ -43,7 +46,9 @@ header{
     width:1140px;
     top:50%;
     left:50%;
-    transform:translate(-50%,-50%);
+    -webkit-transform:translate(-50%,-50%);
+        -ms-transform:translate(-50%,-50%);
+            transform:translate(-50%,-50%);
 }
 h1,h2,h3{
     font-weight: 300;
@@ -104,6 +109,8 @@ h3{
     text-decoration: none;
     border-radius: 200px;
     border:1px solid #e67e22;
+    -webkit-transition:background-color 0.5s,border 0.5s,color 0.5s;
+    -o-transition:background-color 0.5s,border 0.5s,color 0.5s;
     transition:background-color 0.5s,border 0.5s,color 0.5s;
 }
 .btn-ghost:visited, .btn-ghost:link{
@@ -150,6 +157,8 @@ h3{
     text-transform: uppercase;
     font-size:90%;
     border-bottom: 2px solid transparent;
+    -webkit-transition: border-bottom 0.2s;
+    -o-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
     padding: 8px 0;
 }
@@ -183,11 +192,19 @@ h3{
 .meal-photo img{
     opacity:0.5;
     width:100%;
-    transform:scale(1.15);
+    -webkit-transform:scale(1.15);
+        -ms-transform:scale(1.15);
+            transform:scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
+    -o-transition: transform 0.5s, opacity 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 .meal-photo img:hover{
-    transform:scale(1.03);
+    -webkit-transform:scale(1.03);
+        -ms-transform:scale(1.03);
+            transform:scale(1.03);
     opacity:1;
 }
 .section-steps{
@@ -262,6 +279,8 @@ a:visited{
     text-decoration: none;
     padding-bottom: 2px;
     border-bottom:1px solid #e67e22;
+    -webkit-transition: border-bottom 0.5s, color 0.5s;
+    -o-transition: border-bottom 0.5s, color 0.5s;
     transition: border-bottom 0.5s, color 0.5s;
 }
 a:hover,
@@ -270,6 +289,8 @@ a:active{
     border-bottom: 1px solid transparent;
 }
 .section-testimonials{
+    background-image:-webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.8)),to(rgba(0, 0, 0, 0.8))), url(../img/back-customers.jpg);
+    background-image:-o-linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url(../img/back-customers.jpg);
     background-image:linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url(../img/back-customers.jpg);
     background-size: cover;
     color:#fff;
@@ -313,11 +334,17 @@ cite img{
     border-radius:10px ;
     width:90%;
     margin-left: 5%;
-    box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1),0 4px 2px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1),0 4px 2px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1),0 4px 2px rgba(0, 0, 0, 0.1);
+    -webkit-transition: -webkit-box-shadow 0.5s;
+    transition: -webkit-box-shadow 0.5s;
+    -o-transition: box-shadow 0.5s;
     transition: box-shadow 0.5s;
+    transition: box-shadow 0.5s, -webkit-box-shadow 0.5s;
 } 
 .plan-box:hover{
-    box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.25);
+            box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.25);
 }
 .plan-box div{
     padding: 15px;
@@ -395,6 +422,8 @@ footer{
     text-decoration: none;
     border:0;
     color: #888;
+    -webkit-transition: color 0.5s;
+    -o-transition: color 0.5s;
     transition: color 0.5s;
 }
 .footer-nav li a:hover,.social-links li a:hover,.footer-nav li a:active,.social-links li a:active{
@@ -411,6 +440,8 @@ footer p{
 
 }
 .ion-social-facebook,.ion-social-twitter,.ion-social-googleplus,.ion-social-instagram{
+    -webkit-transition: color 0.2s;
+    -o-transition: color 0.2s;
     transition: color 0.2s;
 }
 .ion-social-facebook:hover{
